bluejay-validator/tests/snapshots/executable_integration_test__error@field_selection_merging_deep.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/field_selection_merging_deep.graphql
---
Error: Fields in selection set do not merge due to incompatible types
    ╭─[ field_selection_merging_deep.graphql:3:7 ]
    │
  3 │ ╭─▶   dog {
    ┆ ┆   
  5 │ │         y: name
    │ │            ──┬─  
    │ │              ╰─── First field has type String!
    ┆ ┆   
  8 │ │         y: pets { name }
    │ │            ──┬─  
    │ │              ╰─── Second field has type [Pet!]
    ┆ ┆   
 10 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to unequal field names
    ╭─[ field_selection_merging_deep.graphql:3:7 ]
    │
  3 │ ╭─▶   dog {
    ┆ ┆   
  5 │ │         y: name
    │ │            ──┬─  
    │ │              ╰─── First field
    ┆ ┆   
  8 │ │         y: pets { name }
    │ │            ──┬─  
    │ │              ╰─── Second field
    ┆ ┆   
 10 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to incompatible types
    ╭─[ field_selection_merging_deep.graphql:15:7 ]
    │
 15 │ ╭─▶   dog {
 16 │ │       x: name
    │ │          ──┬─  
    │ │            ╰─── First field has type String!
 17 │ │       x: nickname
    │ │          ────┬───  
    │ │              ╰───── Second field has type String
 18 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to unequal field names
    ╭─[ field_selection_merging_deep.graphql:15:7 ]
    │
 15 │ ╭─▶   dog {
 16 │ │       x: name
    │ │          ──┬─  
    │ │            ╰─── First field
 17 │ │       x: nickname
    │ │          ────┬───  
    │ │              ╰───── Second field
 18 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯
